feat: condition metadata
